# dbrs

./: Cargo.toml  README.md  install.sh  uninstall.sh
.github/workflows/: release.yml
scripts/: smoke-test.sh
src/: main.rs
