[package]
name = "dbrs"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["clock"] }
clap = { version = "4.5", features = ["derive", "env"] }
dotenvy = "0.15"
sha2 = "0.10"
sqlx = { version = "0.8", features = ["any", "postgres", "mysql", "sqlite", "runtime-tokio-rustls"] }
tokio = { version = "1.44", features = ["macros", "rt-multi-thread"] }
